Dodat node, connectionGene

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Sketch</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
@@ -17,5 +17,8 @@
     <script src="game/player.js"></script>
     <script src="game/pipe.js"></script>
     <script src="sketch.js"></script>
+    <script src="neat/Node.js"></script>
+    <script src="neat/ConnectionGene.js"></script>
+    <script src="neat/Genome.js"></script>
   </body>
 </html>
