--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
     <script src="neat/Node.js"></script>
     <script src="neat/ConnectionGene.js"></script>
     <script src="neat/Genome.js"></script>
+    <script src="neat/ConnectionHistory.js"></script>
+    <script src="neat/Population.js"></script>
+    <script src="neat/Species.js"></script>
   </body>
 </html>
