--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <script src="neat/ConnectionHistory.js"></script>
     <script src="neat/Population.js"></script>
     <script src="neat/Species.js"></script>
+    <script src="neat/Brain.js"></script>
   </body>
 </html>
