Manje izmene i dodat seminarski

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <script src="neat/Genome.js"></script>
     <script src="neat/Population.js"></script>
     <script src="neat/Species.js"></script>
-    <script src="neat/Brain.js"></script>
+    <script src="neat/Agent.js"></script>
   </body>
 </html>
